# config/initializers/open_api.rb
@@ -8,5 +8,6 @@ OpenApi::Config.class_eval do
   open_api :swagger_doc, base_doc_classes: [ApiDoc]
   info version: '1.0.0', title: 'Homepage APIs'#, description: ..
   # server 'http://localhost:3000', desc: 'Internal staging server for testing'
-  # bearer_auth :Authorization
+  bearer_auth :Authorization
+  global_auth :Authorization
 end
